--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'scala'
+    id 'com.github.maiflai.scalatest' version '0.24'
 }
+
+sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
@@ -23,13 +26,20 @@ dependencies {
     def sparkVersion = "2.3.1"
     def scalaBuildVersion = "2.11"
 
-    runtimeOnly "com.amazonaws:aws-java-sdk-s3:1.11.526"
-    runtimeOnly "org.apache.spark:spark-core_${scalaBuildVersion}:${sparkVersion}"
-    runtimeOnly "org.apache.spark:spark-sql_${scalaBuildVersion}:${sparkVersion}"
-    runtimeOnly "org.apache.spark:spark-repl_${scalaBuildVersion}:${sparkVersion}"
+    implementation "com.amazonaws:aws-java-sdk-s3:1.11.526"
+    implementation "org.apache.spark:spark-core_${scalaBuildVersion}:${sparkVersion}"
+    implementation "org.apache.spark:spark-sql_${scalaBuildVersion}:${sparkVersion}"
+    implementation "org.apache.spark:spark-repl_${scalaBuildVersion}:${sparkVersion}"
 
-    runtimeOnly "org.apache.hadoop:hadoop-aws:3.1.1"
-    runtimeOnly "org.apache.hadoop:hadoop-common:3.1.1"
+    implementation "org.apache.hadoop:hadoop-aws:3.1.1"
+    implementation "org.apache.hadoop:hadoop-common:3.1.1"
+
+    testImplementation "org.scalatest:scalatest_${scalaBuildVersion}:3.0.5"
+    testImplementation "io.findify:s3mock_${scalaBuildVersion}:0.2.5"
+
+    // used by com.github.maiflai.scalatest
+    testRuntimeOnly 'org.pegdown:pegdown:1.6.0'
+
 }
 
 task jars() {
