print list of jars during test

--- a/build.gradle
+++ b/build.gradle
@@ -49,3 +49,8 @@ task jars() {
         into 'jars/'
     }
 }
+
+// prints out jars for recording in the build log
+task printJars {
+    sourceSets.main.runtimeClasspath.sort().each { println it }
+}
