--- a/build.gradle
+++ b/build.gradle
@@ -12,27 +12,37 @@ repositories {
 
 
 configurations.all {
-    exclude group: 'commons-logging', module: 'commons-logging'
     resolutionStrategy {
         // because hadoop-common brings different jackson versions
-        force "com.fasterxml.jackson.core:jackson-core:2.7.8"
-        force "com.fasterxml.jackson.core:jackson-databind:2.7.8"
-        force "com.fasterxml.jackson.module:jackson-module-scala_2.11:2.7.8"
+        //force "com.fasterxml.jackson.module:jackson-module-scala_2.11:2.9.5"
     }
 }
 
 dependencies {
 
-    def sparkVersion = "2.3.2"
+    def sparkVersion = "2.4.3"
     def scalaBuildVersion = "2.11"
 
-    implementation "com.amazonaws:aws-java-sdk-s3:1.11.526"
-    implementation "org.apache.spark:spark-core_${scalaBuildVersion}:${sparkVersion}"
-    implementation "org.apache.spark:spark-sql_${scalaBuildVersion}:${sparkVersion}"
-    implementation "org.apache.spark:spark-repl_${scalaBuildVersion}:${sparkVersion}"
+    //implementation "com.amazonaws:aws-java-sdk-s3:1.11.526"
+    implementation("org.apache.spark:spark-core_${scalaBuildVersion}:${sparkVersion}") {
+        exclude module: "org.apache.hadoop"
+    }
+    implementation("org.apache.spark:spark-sql_${scalaBuildVersion}:${sparkVersion}") {
+        exclude module: "org.apache.hadoop"
+    }
+    implementation("org.apache.spark:spark-repl_${scalaBuildVersion}:${sparkVersion}") {
+        exclude module: "org.apache.hadoop"
+    }
+    // todo: add hive
 
-    implementation "org.apache.hadoop:hadoop-aws:3.1.1"
-    implementation "org.apache.hadoop:hadoop-common:3.1.1"
+    // could use hadoop-cloud-storage to include azure etc.
+
+    implementation "org.apache.hadoop:hadoop-aws:3.2.0"
+    implementation("org.apache.hadoop:hadoop-common:3.2.0") {
+        // don't bring in a newer version of jackson that conflicts with
+        // spark-core which uses com.fasterxml.jackson.module:jackson-module-scala_2.11:2.6.7.1
+        exclude module: "jackson-databind"
+    }
 
     testImplementation "org.scalatest:scalatest_${scalaBuildVersion}:3.0.5"
     testImplementation "io.findify:s3mock_${scalaBuildVersion}:0.2.5"
