fix - don't run tasks jars and printJars during the configuration phase

--- a/build.gradle
+++ b/build.gradle
@@ -41,14 +41,18 @@ dependencies {
 }
 
 task jars() {
-    delete 'jars/'
-    copy {
-        from sourceSets.main.runtimeClasspath
-        into 'jars/'
+    doLast {
+        delete 'jars/'
+        copy {
+            from sourceSets.main.runtimeClasspath
+            into 'jars/'
+        }
     }
 }
 
 // prints out jars for recording in the build log
 task printJars {
-    sourceSets.main.runtimeClasspath.sort().each { println it }
+    doLast {
+        sourceSets.main.runtimeClasspath.sort().each { println it }
+    }
 }
