--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,9 +3,8 @@ updates:
 - package-ecosystem: gradle
   directory: "/"
   schedule:
-    interval: daily
-    time: "19:00"
-  open-pull-requests-limit: 10
+    interval: monthly
+  open-pull-requests-limit: 5
   ignore:
   - dependency-name: com.fasterxml.jackson.module:jackson-module-scala_2.11
     versions:
